--- a/Serverless-shecan.jsonc
+++ b/Serverless-shecan.jsonc
@@ -1,6 +1,8 @@
 // https://github.com/patterniha/Serverless-for-Iran
 // https://t.me/projectXhttp
 
+// Donate: USDT (TRC20): TU5gKvKqcXPn8itp1DouBCwcqGHMemBm8o
+
 
 {
   "remarks": "Serverless-shecan-v5",
