Serverless v7: Fix "x.com", add "local" anti-sanction

--- a/Serverless-local.jsonc
+++ b/Serverless-local.jsonc
@@ -5,7 +5,7 @@
 
 
 {
-  "remarks": "Serverless-v7",
+  "remarks": "Serverless-local-v7",
 
   "version": {
     "min": "25.9.5"
@@ -47,6 +47,14 @@
         "address": "localhost",
         "domains": ["domain:ir", "geosite:private", "geosite:ir", "full:www.cloudflare.com", "domain:dynx.pro"],
         "finalQuery": true
+      },
+      {
+        "tag": "anti-sanction-dns",
+        "address": "localhost",  // or any anti-sanction DNS
+        "domains": ["geosite:sanctioned"], // if this list is incomplete, put anti-sanction DNS in second place(after fakedns)
+        "unexpectedIPs": ["geoip:irgfw-all-injected-ips", "0.0.0.0", "::", "127.0.0.1", "::1"],
+        "timeoutMs": 2000,
+        "finalQuery": false
       }
     ],
     "queryStrategy": "UseSystem",
@@ -229,34 +237,37 @@
         "domain": ["geosite:category-ads-all"]
       },
       {"outboundTag": "dns-out",
-       "inboundTag": ["dns-in"]
+        "inboundTag": ["dns-in"]
       },
       {"outboundTag": "dns-out",
-       "inboundTag": ["socks-in"], "port": 53
+        "inboundTag": ["socks-in"], "port": 53
+      },
+      {"outboundTag": "direct-out",
+        "inboundTag": ["anti-sanction-dns"]
       },
       {"outboundTag": "full-fragment", // or "skip-fragment"
         "inboundTag": ["no-filter-dns"]
       },
       {"outboundTag": "block-out",
-       "ip": ["geoip:irgfw-block-injected-ips", "0.0.0.0", "::"]
+        "ip": ["geoip:irgfw-block-injected-ips", "0.0.0.0", "::"]
       },
       {"outboundTag": "direct-out",
-       "domain": ["domain:ir", "geosite:private", "geosite:ir", "domain:dynx.pro"], "ip": ["0.0.0.0/0", "::/0"]
+        "domain": ["domain:ir", "geosite:private", "geosite:ir", "domain:dynx.pro"], "ip": ["0.0.0.0/0", "::/0"]
       },
       {"outboundTag": "direct-out",
-       "ip": ["geoip:private", "geoip:ir"]
+        "ip": ["geoip:private", "geoip:ir"]
       },
       {"outboundTag": "udp-noises",
         "network": "udp", "protocol": ["quic"], "ip": ["0.0.0.0/0", "::/0"]
       },
       {"outboundTag": "udp-noises",
-       "network": "udp", "port": "443,2053,2083,2087,2096,8443", "ip": ["0.0.0.0/0", "::/0"]
+        "network": "udp", "port": "443,2053,2083,2087,2096,8443", "ip": ["0.0.0.0/0", "::/0"]
       },
       {"outboundTag": "direct-out",
-       "network": "udp", "ip": ["0.0.0.0/0", "::/0"]
+        "network": "udp", "ip": ["0.0.0.0/0", "::/0"]
       },
       {"outboundTag": "full-fragment", // or "skip-fragment"
-       "network": "tcp", "protocol": ["tls"], "ip": ["0.0.0.0/0", "::/0"]
+        "network": "tcp", "protocol": ["tls"], "ip": ["0.0.0.0/0", "::/0"]
       },
       {"outboundTag": "full-fragment", // or "skip-fragment"
         "network": "tcp", "port": "443,2053,2083,2087,2096,8443", "ip": ["0.0.0.0/0", "::/0"]
