--- a/Serverless-dynx.jsonc
+++ b/Serverless-dynx.jsonc
@@ -5,7 +5,7 @@
 
 
 {
-  "remarks": "Serverless-dynx-v6",
+  "remarks": "Serverless-dynx-v7",
 
   "version": {
     "min": "25.9.5"
@@ -33,12 +33,13 @@
     "servers": [
       {
         "address": "fakedns",
-        "domains": ["domain:ir", "geosite:private", "geosite:ir", "full:www.cloudflare.com", "domain:dynx.pro", "geosite:sanctioned"],
+        "domains": ["domain:ir", "geosite:private", "geosite:ir", "full:www.cloudflare.com", "domain:dynx.pro", "geosite:sanctioned", "geosite:telegram", "geosite:meta", "geosite:youtube", "geosite:x", "geosite:reddit"],
         "finalQuery": true
       },
       {
         "tag": "no-filter-dns",
         "address": "https://cloudflare-dns.com/dns-query",
+        "domains": ["geosite:telegram", "geosite:meta", "geosite:youtube", "geosite:x", "geosite:reddit"],
         "timeoutMs": 5000,
         "finalQuery": true
       },
