Serverless v11: One Subscription for all versions

--- a/Serverless-dynx.jsonc
+++ b/Serverless-dynx.jsonc
@@ -1,11 +1,13 @@
-// https://github.com/patterniha/Serverless-for-Iran
-// https://t.me/projectXhttp
-
-// Donate: USDT (TRC20): TU5gKvKqcXPn8itp1DouBCwcqGHMemBm8o
-
 
 {
-  "remarks": "Serverless-dynx-v10",
+  "__Credits__": {
+    "repository": "https://github.com/patterniha/Serverless-for-Iran",
+    "telegram": "https://t.me/projectXhttp",
+    "donate": "USDT (TRC20): TU5gKvKqcXPn8itp1DouBCwcqGHMemBm8o"
+  },
+
+
+  "remarks": "Serverless-dynx-v11",
 
   "version": {
     "min": "25.9.5"
