--- a/Serverless-local.jsonc
+++ b/Serverless-local.jsonc
@@ -7,7 +7,7 @@
   },
 
 
-  "remarks": "Serverless-local-v12",
+  "remarks": "Serverless-local-v13",
 
   "version": {
     "min": "25.9.5"
@@ -238,6 +238,9 @@
       {"outboundTag": "block-out",
         "domain": ["geosite:category-ads-all"]
       },
+      {"outboundTag": "block-out",
+        "ip": ["geoip:irgfw-block-injected-ips", "0.0.0.0", "::", "198.18.0.0/15", "fc00::/18"]
+      },
       {"outboundTag": "dns-out",
         "inboundTag": ["dns-in"]
       },
@@ -249,9 +252,6 @@
       },
       {"outboundTag": "full-fragment", // or "skip-fragment"
         "inboundTag": ["no-filter-dns"]
-      },
-      {"outboundTag": "block-out",
-        "ip": ["geoip:irgfw-block-injected-ips", "0.0.0.0", "::"]
       },
       {"outboundTag": "direct-out",
         "domain": ["domain:ir", "geosite:private", "geosite:ir", "domain:dynx.pro"]
