--- a/Serverless.jsonc
+++ b/Serverless.jsonc
@@ -7,7 +7,7 @@
   },
 
 
-  "remarks": "Serverless-v13",
+  "remarks": "Serverless-v14",
 
   "version": {
     "min": "25.9.5"
@@ -29,7 +29,6 @@
   "dns":{
     "hosts": {
       "geosite:category-ads-all": "#3",
-      "one.one.one.one": ["1.1.1.1", "1.0.0.1", "2606:4700:4700::1111", "2606:4700:4700::1001"],
       "cloudflare-dns.com": "www.cloudflare.com"
     },
     "servers": [
@@ -61,7 +60,7 @@
       "port": 10853,
       "protocol": "tunnel",
       "settings": {
-        "address": "one.one.one.one",
+        "address": "127.0.0.1",
         "port": 53,
         "network": "tcp,udp"
       },
@@ -118,12 +117,7 @@
     {
       "tag": "dns-out",
       "protocol": "dns",
-      "settings": {"nonIPQuery": "skip", "network": "tcp", "address": "one.one.one.one", "port": 53},
-      "streamSettings": {
-        "sockopt": {
-          "dialerProxy": "full-fragment"
-        }
-      }
+      "settings": {"nonIPQuery": "reject", "blockTypes": [0, 65]}
     },
     {
       "tag": "skip-fragment",
