Serverless v20: Refine "local" version

--- a/Serverless-local.jsonc
+++ b/Serverless-local.jsonc
@@ -7,7 +7,7 @@
   },
 
 
-  "remarks": "Serverless-local-v19",
+  "remarks": "Serverless-local-v20",
 
   "version": {
     "min": "25.10.15"
@@ -34,7 +34,14 @@
     "servers": [
       {
         "address": "fakedns",
-        "domains": ["domain:ir", "geosite:private", "geosite:ir", "full:challenges.cloudflare.com", "domain:dynx.pro", "geosite:sanctioned", "geosite:telegram", "geosite:meta", "geosite:youtube", "geosite:twitter", "geosite:reddit", "geosite:twitch", "geosite:tiktok", "geosite:discord"]
+        "domains": ["domain:ir", "geosite:private", "geosite:ir", "full:challenges.cloudflare.com", "geosite:telegram", "geosite:meta", "geosite:youtube", "geosite:twitter", "geosite:reddit", "geosite:twitch", "geosite:tiktok", "geosite:discord"]
+      },
+	  {
+        "tag": "anti-sanction-dns",
+        "address": "localhost",  // or any anti-sanction DNS
+        "unexpectedIPs": ["geoip:irgfw-all-injected-ips", "0.0.0.0", "::", "127.0.0.1", "::1"],
+        "timeoutMs": 2500,
+        "finalQuery": false
       },
       {
         "tag": "no-filter-dns",
@@ -45,16 +52,8 @@
       },
       {
         "address": "localhost",
-        "domains": ["domain:ir", "geosite:private", "geosite:ir", "full:challenges.cloudflare.com", "domain:dynx.pro"],
+        "domains": ["domain:ir", "geosite:private", "geosite:ir", "full:challenges.cloudflare.com"],
         "finalQuery": true
-      },
-      {
-        "tag": "anti-sanction-dns",
-        "address": "localhost",  // or any anti-sanction DNS
-        "domains": ["geosite:sanctioned"], // if this list is incomplete, put anti-sanction DNS in second place(after fakedns)
-        "unexpectedIPs": ["geoip:irgfw-all-injected-ips", "0.0.0.0", "::", "127.0.0.1", "::1"],
-        "timeoutMs": 2000,
-        "finalQuery": false
       }
     ],
     "queryStrategy": "UseSystem",
@@ -267,7 +266,7 @@
        "ip": ["geoip:irgfw-block-injected-ips", "0.0.0.0", "::", "198.18.0.0/15", "fc00::/18"]
       },
       {"outboundTag": "direct-out",
-       "domain": ["domain:ir", "geosite:private", "geosite:ir", "domain:dynx.pro"], "ip": ["0.0.0.0/0", "::/0"]
+       "domain": ["domain:ir", "geosite:private", "geosite:ir"], "ip": ["0.0.0.0/0", "::/0"]
       },
       {"outboundTag": "direct-out",
        "ip": ["geoip:private", "geoip:ir"]
