--- a/Serverless-dynx.jsonc
+++ b/Serverless-dynx.jsonc
@@ -7,7 +7,7 @@
   },
 
 
-  "remarks": "Serverless-dynx-v20",
+  "remarks": "Serverless-dynx-v21",
 
   "version": {
     "min": "25.10.15"
@@ -34,12 +34,12 @@
     "servers": [
       {
         "address": "fakedns",
-        "domains": ["domain:ir", "geosite:private", "geosite:ir", "full:challenges.cloudflare.com", "domain:dynx.pro", "geosite:sanctioned", "geosite:telegram", "geosite:meta", "geosite:youtube", "geosite:twitter", "geosite:reddit", "geosite:twitch", "geosite:tiktok", "geosite:discord"]
+        "domains": ["domain:ir", "geosite:private", "geosite:ir", "full:challenges.cloudflare.com", "domain:dynx.pro", "geosite:sanctioned", "geosite:category-porn", "geosite:telegram", "geosite:meta", "geosite:youtube", "geosite:twitter", "geosite:reddit", "geosite:twitch", "geosite:tiktok", "geosite:discord"]
       },
       {
         "tag": "no-filter-dns",
         "address": "https://cloudflare-dns.com/dns-query",
-        "domains": ["geosite:telegram", "geosite:meta", "geosite:youtube", "geosite:twitter", "geosite:reddit", "geosite:twitch", "geosite:tiktok", "geosite:discord"],
+        "domains": ["geosite:category-porn", "geosite:telegram", "geosite:meta", "geosite:youtube", "geosite:twitter", "geosite:reddit", "geosite:twitch", "geosite:tiktok", "geosite:discord"],
         "timeoutMs": 10000,
         "finalQuery": true
       },
@@ -50,8 +50,8 @@
       },
       {
         "tag": "anti-sanction-dns",
-        "address": "https://anti-ban.dynx.pro/dns-query",  // or any anti-sanction DNS
-        "domains": ["geosite:sanctioned"], // if this list is incomplete, put anti-sanction DNS in second place(after fakedns)
+        "address": "https://anti-ban.dynx.pro/dns-query",
+        "domains": ["geosite:sanctioned"],
         "unexpectedIPs": ["geoip:irgfw-all-injected-ips", "0.0.0.0", "::", "127.0.0.1", "::1"],
         "timeoutMs": 2500,
         "finalQuery": false
@@ -140,7 +140,7 @@
       },
       "streamSettings": {
         "sockopt": {
-          "dialerProxy": "full-fragment"
+          "dialerProxy": "full-fragment" // or "skip-fragment" (with different parameteres)
         }
       }
     },
@@ -260,7 +260,7 @@
       {"outboundTag": "direct-out",
        "inboundTag": ["anti-sanction-dns"]
       },
-      {"outboundTag": "full-fragment", // or "skip-fragment"
+      {"outboundTag": "full-fragment", // or "skip-fragment" or "tls-fragment"
        "inboundTag": ["no-filter-dns"]
       },
       {"outboundTag": "block-out",
@@ -281,10 +281,10 @@
       {"outboundTag": "direct-out",
        "network": "udp", "ip": ["0.0.0.0/0", "::/0"]
       },
-      {"outboundTag": "full-fragment", // or "skip-fragment"
+      {"outboundTag": "full-fragment", // or "skip-fragment" or "tls-fragment"
        "network": "tcp", "protocol": ["tls"], "ip": ["0.0.0.0/0", "::/0"]
       },
-      {"outboundTag": "full-fragment", // or "skip-fragment"
+      {"outboundTag": "full-fragment", // or "skip-fragment" or "tls-fragment"
        "network": "tcp", "port": "443,2053,2083,2087,2096,8443", "ip": ["0.0.0.0/0", "::/0"]
       },
       {"outboundTag": "full-fragment",
