Serverless v24: Remove unnecessary parts

--- a/Serverless-dynx.jsonc
+++ b/Serverless-dynx.jsonc
@@ -7,7 +7,7 @@
   },
 
 
-  "remarks": "Serverless-dynx-v23",
+  "remarks": "Serverless-dynx-v24",
 
   "version": {
     "min": "25.10.15"
@@ -267,7 +267,7 @@
        "ip": ["geoip:irgfw-block-injected-ips", "0.0.0.0", "::", "198.18.0.0/15", "fc00::/18"]
       },
       {"outboundTag": "direct-out",
-       "domain": ["domain:ir", "geosite:private", "geosite:ir", "domain:dynx.pro"], "ip": ["0.0.0.0/0", "::/0"]
+       "domain": ["domain:ir", "geosite:private", "geosite:ir"], "ip": ["0.0.0.0/0", "::/0"]
       },
       {"outboundTag": "direct-out",
        "ip": ["geoip:private", "geoip:ir"]
