Serverless v25: Allow connections from the LAN

--- a/Serverless-dynx.jsonc
+++ b/Serverless-dynx.jsonc
@@ -7,7 +7,7 @@
   },
 
 
-  "remarks": "Serverless-dynx-v24",
+  "remarks": "Serverless-dynx-v25",
 
   "version": {
     "min": "25.10.15"
@@ -64,7 +64,7 @@
   "inbounds": [
     {
       "tag": "dns-in",
-      "listen": "127.0.0.1",
+      // "listen": "127.0.0.1",
       "port": 10853,
       "protocol": "tunnel",
       "settings": {
@@ -81,7 +81,7 @@
     },
     {
       "tag": "socks-in",
-      "listen": "127.0.0.1",
+      // "listen": "127.0.0.1",
       "port": 10808,
       "protocol": "mixed",
       "sniffing": {
