--- a/Serverless-local.jsonc
+++ b/Serverless-local.jsonc
@@ -7,7 +7,7 @@
   },
 
 
-  "remarks": "Serverless-local-v24",
+  "remarks": "Serverless-local-v25",
 
   "version": {
     "min": "25.10.15"
@@ -63,7 +63,7 @@
   "inbounds": [
     {
       "tag": "dns-in",
-      "listen": "127.0.0.1",
+      // "listen": "127.0.0.1",
       "port": 10853,
       "protocol": "tunnel",
       "settings": {
@@ -80,7 +80,7 @@
     },
     {
       "tag": "socks-in",
-      "listen": "127.0.0.1",
+      // "listen": "127.0.0.1",
       "port": 10808,
       "protocol": "mixed",
       "sniffing": {
