Serverless v26: Add FakeIP Pools

--- a/Serverless.jsonc
+++ b/Serverless.jsonc
@@ -7,7 +7,7 @@
   },
 
 
-  "remarks": "Serverless-v25",
+  "remarks": "Serverless-v26",
 
   "version": {
     "min": "25.10.15"
@@ -25,6 +25,17 @@
       }
     }
   },
+  
+  "fakedns": [
+    {
+      "ipPool": "198.19.0.0/16",
+      "poolSize": 65535
+    },
+    {
+      "ipPool": "fc80::/9",
+      "poolSize": 65535
+    }
+  ],
 
   "dns":{
     "hosts": {
