--- a/Serverless-dynx.jsonc
+++ b/Serverless-dynx.jsonc
@@ -1,4 +1,3 @@
-
 {
   "__Credits__": {
     "repository": "https://github.com/patterniha/Serverless-for-Iran",
@@ -7,7 +6,7 @@
   },
 
 
-  "remarks": "Serverless-dynx-v27",
+  "remarks": "Serverless-dynx-v28",
 
   "version": {
     "min": "25.10.15"
@@ -25,7 +24,7 @@
       }
     }
   },
-  
+
   "fakedns": [
     {
       "ipPool": "198.19.0.0/16",
@@ -64,7 +63,7 @@
         "address": "https://anti-ban.dynx.pro/dns-query",
         "domains": ["geosite:sanctioned"],
         "unexpectedIPs": ["geoip:irgfw-all-injected-ips", "0.0.0.0", "::", "127.0.0.1", "::1"],
-        "timeoutMs": 2500,
+        "timeoutMs": 4000,
         "finalQuery": false
       }
     ],
@@ -119,7 +118,7 @@
       "protocol": "block"
     },
     {
-      "tag": "direct-out",
+      "tag": "tcp-direct-out",
       "protocol": "direct",
       "streamSettings": {
         "sockopt": {
@@ -133,6 +132,13 @@
         }
       }
     },
+	{
+      "tag": "udp-direct-out",
+      "protocol": "direct",
+      "settings": {
+        "targetStrategy": "ForceIPv6v4"
+	  }
+	},
     {
       "tag": "dns-out",
       "protocol": "dns",
@@ -222,7 +228,7 @@
       "tag": "udp-noises",
       "protocol": "direct",
       "settings": {
-        "targetStrategy": "ForceIP", // or "ForceIPv6v4" to prefer IPv6
+        "targetStrategy": "ForceIPv6v4",
         "noises": [
           {"type": "rand", "packet": "1250", "delay": "10", "applyTo": "ipv4"}, {"type": "rand", "packet": "1250", "delay": "10", "applyTo": "ipv4"},
           {"type": "rand", "packet": "1250", "delay": "10", "applyTo": "ipv4"}, {"type": "rand", "packet": "1250", "delay": "10", "applyTo": "ipv4"},
@@ -268,8 +274,11 @@
       {"outboundTag": "dns-out",
        "inboundTag": ["socks-in"], "port": 53
       },
-      {"outboundTag": "direct-out",
-       "inboundTag": ["anti-sanction-dns"]
+      {"outboundTag": "tcp-direct-out",
+       "network": "tcp", "inboundTag": ["anti-sanction-dns"]
+      },
+	  {"outboundTag": "udp-direct-out",
+       "network": "udp", "inboundTag": ["anti-sanction-dns"]
       },
       {"outboundTag": "full-fragment", // or "skip-fragment" or "tls-fragment"
        "inboundTag": ["no-filter-dns"]
@@ -277,11 +286,17 @@
       {"outboundTag": "block-out",
        "ip": ["geoip:irgfw-block-injected-ips", "0.0.0.0", "::", "198.19.0.0/16", "fc80::/9"]
       },
-      {"outboundTag": "direct-out",
-       "domain": ["domain:ir", "geosite:private", "geosite:ir"], "ip": ["0.0.0.0/0", "::/0"]
+      {"outboundTag": "tcp-direct-out",
+       "network": "tcp", "domain": ["domain:ir", "geosite:private", "geosite:ir"], "ip": ["0.0.0.0/0", "::/0"]
       },
-      {"outboundTag": "direct-out",
-       "ip": ["geoip:private", "geoip:ir"]
+	  {"outboundTag": "udp-direct-out",
+       "network": "udp", "domain": ["domain:ir", "geosite:private", "geosite:ir"], "ip": ["0.0.0.0/0", "::/0"]
+      },
+      {"outboundTag": "tcp-direct-out",
+       "network": "tcp", "ip": ["geoip:private", "geoip:ir"]
+      },
+	  {"outboundTag": "udp-direct-out",
+       "network": "udp", "ip": ["geoip:private", "geoip:ir"]
       },
       {"outboundTag": "udp-noises",
        "network": "udp", "protocol": ["quic"], "ip": ["0.0.0.0/0", "::/0"]
