--- a/Serverless.jsonc
+++ b/Serverless.jsonc
@@ -1,4 +1,3 @@
-
 {
   "__Credits__": {
     "repository": "https://github.com/patterniha/Serverless-for-Iran",
@@ -7,7 +6,7 @@
   },
 
 
-  "remarks": "Serverless-v27",
+  "remarks": "Serverless-v28",
 
   "version": {
     "min": "25.10.15"
@@ -25,7 +24,7 @@
       }
     }
   },
-  
+
   "fakedns": [
     {
       "ipPool": "198.19.0.0/16",
@@ -110,7 +109,7 @@
       "protocol": "block"
     },
     {
-      "tag": "direct-out",
+      "tag": "tcp-direct-out",
       "protocol": "direct",
       "streamSettings": {
         "sockopt": {
@@ -124,6 +123,13 @@
         }
       }
     },
+	{
+      "tag": "udp-direct-out",
+      "protocol": "direct",
+      "settings": {
+        "targetStrategy": "ForceIPv6v4"
+	  }
+	},
     {
       "tag": "dns-out",
       "protocol": "dns",
@@ -213,7 +219,7 @@
       "tag": "udp-noises",
       "protocol": "direct",
       "settings": {
-        "targetStrategy": "ForceIP", // or "ForceIPv6v4" to prefer IPv6
+        "targetStrategy": "ForceIPv6v4",
         "noises": [
           {"type": "rand", "packet": "1250", "delay": "10", "applyTo": "ipv4"}, {"type": "rand", "packet": "1250", "delay": "10", "applyTo": "ipv4"},
           {"type": "rand", "packet": "1250", "delay": "10", "applyTo": "ipv4"}, {"type": "rand", "packet": "1250", "delay": "10", "applyTo": "ipv4"},
@@ -265,11 +271,17 @@
       {"outboundTag": "block-out",
        "ip": ["geoip:irgfw-block-injected-ips", "0.0.0.0", "::", "198.19.0.0/16", "fc80::/9"]
       },
-      {"outboundTag": "direct-out",
-       "domain": ["domain:ir", "geosite:private", "geosite:ir"], "ip": ["0.0.0.0/0", "::/0"]
+      {"outboundTag": "tcp-direct-out",
+       "network": "tcp", "domain": ["domain:ir", "geosite:private", "geosite:ir"], "ip": ["0.0.0.0/0", "::/0"]
       },
-      {"outboundTag": "direct-out",
-       "ip": ["geoip:private", "geoip:ir"]
+	  {"outboundTag": "udp-direct-out",
+       "network": "udp", "domain": ["domain:ir", "geosite:private", "geosite:ir"], "ip": ["0.0.0.0/0", "::/0"]
+      },
+      {"outboundTag": "tcp-direct-out",
+       "network": "tcp", "ip": ["geoip:private", "geoip:ir"]
+      },
+	  {"outboundTag": "udp-direct-out",
+       "network": "udp", "ip": ["geoip:private", "geoip:ir"]
       },
       {"outboundTag": "udp-noises",
        "network": "udp", "protocol": ["quic"], "ip": ["0.0.0.0/0", "::/0"]
