--- a/Serverless-local.jsonc
+++ b/Serverless-local.jsonc
@@ -6,10 +6,10 @@
   },
 
 
-  "remarks": "Serverless-local-v31",
+  "remarks": "Serverless-local-v32",
 
   "version": {
-    "min": "25.10.15"
+    "min": "25.12.8"
   },
 
   "log": {
@@ -67,7 +67,9 @@
       }
     ],
     "queryStrategy": "UseSystem",
-    "useSystemHosts": true
+    "useSystemHosts": true,
+	"serveStale": true,
+    "serveExpiredTTL": 21600
   },
 
   "inbounds": [
@@ -123,7 +125,7 @@
         "sockopt": {
           "domainStrategy": "ForceIP",
           "happyEyeballs": {
-            "tryDelayMs": 100,
+            "tryDelayMs": 300,
             "prioritizeIPv6": true,
             "interleave": 2,
             "maxConcurrentTry": 16
